hphp/test/quick/ctor_param_promotion_interface.php.expectf

Fatal error: Interface method %s cannot contain body in %s on line 4
